--- a/index.css
+++ b/index.css
@@ -3,17 +3,25 @@ body {
     padding: 0;
     height: 2500px;
 }
+body, ul, li {
+    margin: 0;
+    padding: 0; 
+}
+ul {
+    list-style-type: none;
+}
 a {
     text-decoration: none;
 }
 .topbar {
     background: #333;
     height: 40px;
-    line-height: 40px;
+    /* line-height: 40px; */
 }
 .topbar a {
     color: #b0b0b0;
     font-size: 12px;
+    line-height: 40px;
 }
 .topbar a:hover {
     color: #fff;
@@ -23,11 +31,12 @@ a {
     width: 1226px;
     /* border: 1px solid #000 */
 }
-.container::after, .container::before{
+.container::after, .container::before
+.clearfix::after, .clearfix::before{
     content: "";
     display: table;
 }
-.container::after {
+.container::after, .clearfix::after{
     clear: both;
 }
 .topbar-nav {
@@ -69,4 +78,67 @@ a {
 }
 .topbar-cart .sep {
     padding: 0 10px;
+}
+/* logo分类导航 */
+.header {
+    height: 100px;
+}
+.header-logo {
+    float: left;
+    width: 62px;
+    height: 55px;
+    margin-top: 22px;
+    /* border: 1px solid #000000; */
+}
+.header-logo a {
+    display: block;
+    width: 55px;
+    height: 55px;
+    background: #ff6700 url('img/mi-logo.png')no-repeat 50% 50%;
+}
+.header-logo a.lr {
+    text-align: left;
+    text-indent: -9999em;
+}
+.header-nav {
+    float: left;
+    width: 820px;
+    height: 100px;
+    /* border: 1px solid #000000; */
+}
+.header-nav .nav-list {
+    width: 820px;
+    height: 88px;
+    font-size: 16px; 
+    padding: 12px 0 0 30px; 
+}
+/* 全部商品 */
+.header-nav .nav-list .nav-category{
+    float: left;
+    width: 127px;
+    padding: 0 15px 0 0;
+}
+.header-nav .nav-list .nav-category a {
+    display: block;
+    text-align: right;
+    padding: 26px 0 28px;
+    color: #333;
+}
+.header-nav .nav-list .nav-item {
+    float: left;
+}
+.header-nav .nav-list .nav-item a{
+    display: block;
+    padding: 26px 10px 38px;
+    color: #333;
+}
+.header-nav .nav-list .nav-item a:hover {
+    color: #ff6700;
+}
+.header-search {
+    float: right;
+    width: 296px;
+    height: 50px;
+    margin-top: 25px;
+    border: 1px solid #000000;
 }
